static/style.less
.answered {
	border: 1px solid @brand-success;
	color: @brand-success;
}

.unanswered {
	border: 1px solid @brand-warning;
	color: @brand-warning;
}

.unanswered, .answered {
	font-size: 10px;
	padding: 4px 8px;
	vertical-align: text-bottom;
	font-weight: 700;
}

.breadcrumb {
	.answered, .unanswered {
		display: none;
	}
}

html .topic {
	.answered {
		color: @brand-success;
	}

	.unanswered {
		color: @brand-warning;
	}
}

.posts [component="post"][data-index="-1"].isSolved {
	&:before {
		content: attr(data-label);
		background: @brand-success;
		border-radius: 0 4px 4px 0;
		color: @label-color;
		text-transform: uppercase;
		font-size: 10px;
		padding: 4px 8px;
		font-weight: 600;
		position: relative;
		top: -1.25rem;
	}

	border-left: 8px solid @brand-success;
	border-right: 1px solid @brand-success;
	border-top: 1px solid @brand-success;
	border-bottom: 1px solid @brand-success;

	padding-top: 40px;	// to make room for label (in :before pseudo-element)

	.necro-post {
		display: none;
	}

	@media (max-width: @screen-xs-max) {
		margin-left: -15px;
	}

	> hr {
		display: none;
	}

	.bookmarked:before {
		color: @brand-success;
		content: "\f00c";
	}
}

.posts.timeline > [component="post"].isSolved {
	margin-left: calc(2.5rem - 3.5px);

	> div:not(.content) {
		margin-left: calc(-2.5rem - 3.5px);
	}
}

